fix(ux) Set max width to sidebar to avoid overflow text (#2452)

--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -5,6 +5,7 @@
 .sidebar {
   display: none;
   width: 100%;
+  max-width: 280px;
   max-height: 100%;
   will-change: transform;
 
